--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/styled": "^11.14.0",
     "classnames": "^2.5.1",
+    "framer-motion": "^11.17.0",
     "next": "15.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
