--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "@emotion/styled": "^11.14.0",
+    "@svgr/webpack": "^8.1.0",
     "classnames": "^2.5.1",
     "framer-motion": "^11.17.0",
+    "locomotive-scroll": "^4.1.4",
     "next": "15.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-locomotive-scroll": "^0.2.2",
     "sass": "^1.83.0"
   },
   "devDependencies": {
