--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-locomotive-scroll": "^0.2.2",
+    "react-parallax-tilt": "^1.7.272",
     "sass": "^1.83.0"
   },
   "devDependencies": {
