--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-hook-form": "^7.54.2",
     "react-locomotive-scroll": "^0.2.2",
     "react-parallax-tilt": "^1.7.272",
-    "sass": "^1.83.0"
+    "sass": "^1.83.0",
+    "swiper": "^11.2.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
